fixes budgets stats color contrast

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -2807,6 +2807,31 @@ h2.map-title {
   }
 }
 
+// Budgets stats
+
+.budgets-stats {
+
+  .header {
+
+    h1 {
+      font-family: 'Franklin Gothic' !important;
+    }
+
+    h1,
+    .back,
+    .icon-angle-left {
+      color: #000;
+    }
+  }
+
+  .big-number-stat {
+
+    &.budget {
+      color: $budget-custom;
+    }
+  }
+}
+
 // 12. Nvotes
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
